--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Comfortaa:wght@500&family=Poppins:wght@900&display=swap" rel="stylesheet">
+    <!--IMG-->
+    <link rel="icon" type="image/png" href="download.png">
     <!--Title-->
-    <title>Portafolio</title>
+    <title>Petzyfy</title>
   </head>
   <body>
     <div id="root"></div>
