--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--IMG-->
     <link rel="icon" type="image/png" href="download.png">
     <!--Title-->
-    <title>Petzyfy</title>
+    <title>Petzify</title>
   </head>
   <body>
     <div id="root"></div>
